NEWS for Antiprism: http://www.antiprism.com

Version 0.26
xx-xx-xx Adrian Rossiter <adrian@antiprism.com>
         New Programs
            mmop_origami: multimodular polyhedron origami models
         Changes
            sph_saff: removed (use antiprism_python)
            off2m,m2off: removed (Java applets no longer popular)
         Fixes

Version 0.25.1
08-12-17 Adrian Rossiter <adrian@antiprism.com>
         Fixes
            build: issues affecting OSX, install all headers

Version 0.25
23-11-17 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            stellate: polyhedron stellations (Roger Kaufman)
            miller: Miller's stellations of the icosahedron (Roger Kaufman)
            wythoff: Wythoff-style tilings on various surfaces
            kaleido: Legacy program ported to Antiprism (Roger Kaufman)
            radial: Color by symmetry radiating from axes (Roger Kaufman)
         Changes
            poly_weave: moved to unsupported programs
            off2obj: added optional mtl file output
            canonical: works on more models and code reorganization
              added new planarization and display options
            conway: changed to use wythoff engine while keeping legacy
              code by George Hart. Enhancements and additional operators
              to original conway operators
            waterman: option to fill interior points
            off_util: removed -E
         Fixes
            pol_recip: dual vertices for very small faces
            poly_weave: input can be non-closed surface
            off_util: -u input can be non-closed surface, -T works with
              more models
            antiview: default handling of large models

Version 0.24.1
18-11-16 Adrian Rossiter <adrian@antiprism.com>
         Fixes
            symmetro: docs

Version 0.24
08-10-16 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            to_nfold: change the rotational symmetry of a polyhedron