@@ -35,7 +35,6 @@ radius value \- use this value as the radius
 v \- nearest vertex distance, V \- furthest vertex distance
 e \- nearest edge distance,   E \- furthest edge distance
 f \- nearest face distance,   F \- furthest face distance
-X \- topological dual using face centroids for dual vertices
 .IP
 or a comma separated list of vertex indices (starting from 0)
 and the distance is to the space containing those vertices
